--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
+    "bytes": "^2.5.0",
     "socket.io-client": "^2.0.3",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0",
