--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "bytes": "^2.5.0",
+    "moment": "^2.18.1",
     "socket.io-client": "^2.0.3",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0",
